versions/v2.15/modules/en/pages/installation-and-upgrade/references/feature-flags.adoc
= Feature Flags
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2026-07-30
:page-revdate: {revdate}
:community-path: getting-started/installation-and-upgrade/installation-references/feature-flags.adoc 
:page-product-path: installation-and-upgrade/references/feature-flags.adoc
ifeval::["{build-type}" != "community"]
:xref-cluster-deployment-register-existing-clusters: xref:cluster-deployment/register-existing-clusters.adoc
:xref-experimental-features: xref:rancher-admin/experimental-features/experimental-features.adoc
:xref-cluster-project-roles: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
:xref-harvester-overview: xref:integrations/harvester/overview.adoc
:xref-register-clusters: xref:cluster-deployment/register-existing-clusters.adoc
:xref-fleet: xref:integrations/fleet/fleet.adoc
:xref-unsupported-storage-drivers: xref:rancher-admin/experimental-features/unsupported-storage-drivers.adoc
:xref-role-template-aggregation: xref:rancher-admin/experimental-features/role-template-aggregation.adoc
:xref-istio-traffic-management: xref:rancher-admin/experimental-features/istio-traffic-management-features.adoc
:xref-ui-server-side-pagination: xref:rancher-admin/global-configuration/ui-server-side-pagination.adoc
:xref-continuous-delivery: xref:rancher-admin/experimental-features/continuous-delivery.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-cluster-deployment-register-existing-clusters: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/register-existing-clusters.adoc
:xref-experimental-features: xref:how-to-guides/advanced-user-guides/enable-experimental-features/index.adoc
:xref-cluster-project-roles: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
:xref-harvester-overview: xref:integrations-in-rancher/harvester/overview.adoc
:xref-register-clusters: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/register-existing-clusters.adoc
:xref-fleet: xref:integrations-in-rancher/fleet/index.adoc
:xref-unsupported-storage-drivers: xref:how-to-guides/advanced-user-guides/enable-experimental-features/unsupported-storage-drivers.adoc
:xref-role-template-aggregation: xref:how-to-guides/advanced-user-guides/enable-experimental-features/role-template-aggregation.adoc
:xref-istio-traffic-management: xref:how-to-guides/advanced-user-guides/enable-experimental-features/istio-traffic-management-features.adoc
:xref-ui-server-side-pagination: xref:how-to-guides/advanced-user-guides/ui-server-side-pagination.adoc
:xref-continuous-delivery: xref:how-to-guides/advanced-user-guides/enable-experimental-features/continuous-delivery.adoc
endif::[]

With feature flags, you can try out optional or experimental features, and enable legacy features that are being phased out.

To learn more about feature values and how to enable them, see {xref-experimental-features}[Enabling Experimental Features].

[NOTE]
====
Some feature flags require a restart of the Rancher container. Features that require a restart are marked in the Rancher UI.
====


The following is a list of feature flags available in Rancher. If you've upgraded from a previous Rancher version, you may see additional flags in the Rancher UI, such as `proxy` or `dashboard` (both discontinued):

* `aggregated-roletemplates`: Use cluster role aggregation architecture for RoleTemplates, ProjectRoleTemplateBindings, and ClusterRoleTemplateBindings. See {xref-role-template-aggregation}[RoleTemplate Aggregation] for more information.
* `clean-stale-secrets`: Removes stale secrets from the `cattle-impersonation-system` namespace. This slowly cleans up old secrets which are no longer being used by the impersonation system.
* `cluster-shell`: Enables the Rancher cluster shell feature, which allows users to access a kubectl shell directly from the Rancher UI to manage cluster resources.
* `continuous-delivery`: Allows Fleet GitOps to be disabled separately from Fleet. See {xref-continuous-delivery}[Continuous Delivery.] for more information.
* `crt-token-ttl-rotation`: This feature flag enables automatic CRT token expiration and rotation, configurable via `CRTDefaultTTL`/`CRTDefaultGracePeriod` settings or per-CRT overrides. On expiry, a new token is generated; both old and new tokens remain valid during the grace period giving agents time to pick up the new credential. Rotation is paired with new detection logic in `clusterDeploy` that recognizes when a cluster's token has changed and automatically redeploys the cluster agent with the new credential. Token rotation alone would otherwise never reach a running agent. The feature flag is opt-in for 2.13 and 2.14, and enabled by default starting in 2.15.
* `fleet`: The Rancher provisioning framework in v2.6 and later requires Fleet. The flag will be automatically enabled when you upgrade, even if you disabled this flag in an earlier version of Rancher. See {xref-fleet}[Continuous Delivery with Fleet] for more information.
* `harvester`: Manages access to the Virtualization Management page, where users can navigate directly to Harvester clusters and access the Harvester UI. See {xref-harvester-overview}[{harvester-product-name} Integration Overview] for more information.
* `harvester-baremetal-container-workload`: This feature flag is disabled by default. When enabled the Rancher UI stops filtering out Harvester clusters, allowing Fleet bundles and applications to target and deploy container workloads directly to them. After enabling the `harvester-baremetal-container-workload` feature flag, please validate existing Fleet Bundles to ensure they now select, or don't select, the required clusters. When disabled, the UI maintains the default behavior and excludes Harvester clusters from Fleet targets.
* `hide-local-auth-provider`: When enabled, hides the local auth provider from users if one or more external auth providers are configured and active. This prevents login through the UI, API, and CLI. It does not revoke API keys that were already issued for `local-auth-provider` users. Creation or editing of `local-auth-provider users` in the UI is also disabled, administrators and users with the `manage-users` permission will continue to be able to create or edit users via API or CLI. This flag is disabled by default.
+
[#hide-local-auth-provider-warning]
[WARNING]
====
If the external auth provider becomes unavailable whilst this flag is active, it will not be possible to log in via UI, API or CLI. So when `hide-local-auth-provider` is enabled, make sure an administrator has a valid, non-expiring-soon API key or `kubeconfig` token for the local cluster. These can be used to recover the system by using either the API or  `kubectl` to disable the `hide-local-auth-provider` flag.
====
* `imperative-api-extension`: Enables Rancher's https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/apiserver-aggregation/[extension API server] to register new APIs to Kubernetes. This flag is enabled by default. See the xref:api/extension-apiserver.adoc[Extension API Server] page for more information.
* `imported-day-2-ops`: Enables day 2 operations for imported RKE2 and K3s clusters. This flag is active by default and requires a Rancher restart when its value changes. See {xref-cluster-deployment-register-existing-clusters}#_day_2_operations_for_imported_rke2_and_k3s_clusters[Day 2 Operations for Imported RKE2 and K3s Clusters] for more information.
* `istio-virtual-service-ui`: Enables a {xref-istio-traffic-management}[visual interface] to create, read, update, and delete Istio virtual services and destination rules, which are Istio traffic management features.
* `legacy`: Enables a set of features from 2.5.x and earlier, that are slowly being phased out in favor of newer implementations. These are a mix of deprecated features as well as features that will eventually be available to newer versions. This flag is disabled by default on new Rancher installations. If you're upgrading from a previous version of Rancher, this flag is enabled.
* `managed-system-upgrade-controller`: Enables the installation of the system-upgrade-controller app in downstream imported RKE2/K3s clusters, as well as in the local cluster if it is an RKE2/K3s cluster.

[IMPORTANT]
====
This `managed-system-upgrade-controller` flag is intended for **internal use only** and does not have an associated Feature CR. Use with caution.

To control whether Rancher should manage the Kubernetes version of imported RKE2/K3s clusters, it is recommended to use the {xref-register-clusters}#_configuring_version_management_for_rke2_and_k3s_clusters[imported-cluster-version-management] feature that is available in Rancher v2.11.0 or newer.
====

[WARNING]
====
If the `managed-system-upgrade-controller` flag was **disabled** in Rancher v2.10.x, and any imported RKE2/K3s clusters were upgraded **outside of Rancher**, follow the steps below to prevent the unexpected installation of the system-upgrade-controller app and to ensure the {xref-register-clusters}#_configuring_version_management_for_rke2_and_k3s_clusters[imported-cluster-version-management] feature works correctly:

. Upgrade Rancher to v2.11.0 or newer, making sure to **retain** the `managed-system-upgrade-controller=false` feature flag in Helm values if it was set during the v2.10.x installation.
. After Rancher is fully up and running, disable the `imported-cluster-version-management` setting. You can do this either through the Rancher UI by clicking **☰ > Global Settings > Settings > imported-cluster-version-management**, or by editing the corresponding `Setting.management.cattle.io/v3` custom resource via kubectl.
. Perform a second Helm upgrade, this time omitting the `managed-system-upgrade-controller=false` feature flag.

Now, the imported cluster version management is disabled by default, and Rancher no longer installs the system-upgrade-controller app on imported clusters automatically.

You can enable this feature on a per-cluster basis. For more information, please refer to the {xref-register-clusters}#_configuring_version_management_for_rke2_and_k3s_clusters[documentation].
====

* `multi-cluster-management`: Allows multi-cluster provisioning and management of Kubernetes clusters. This flag can only be set at install time. It can't be enabled or disabled later.
* `node-shell`: Enables the Rancher node shell feature, which allows users to SSH into provisioned cluster nodes directly from the Rancher UI.
* `pod-shell`: Enables the Rancher pod shell feature, which allows users to execute shell commands inside pods directly from the Rancher UI.
* `rke2`: Enables provisioning RKE2 clusters. This flag is enabled by default.
* `token-hashing`: Enables token hashing. Once enabled, existing tokens will be hashed and all new tokens will be hashed automatically with the SHA256 algorithm. Once a token is hashed it can't be undone. This flag can't be disabled after its enabled. See xref:api/api-tokens.adoc#_token_hashing[API Tokens] for more information.
* `uiextension`: Enables UI extensions. This flag is enabled by default. Enabling or disabling the flag forces the Rancher pod to restart. The first time this flag is set to `Active`, it creates a CRD and enables the controllers and endpoints necessary for the feature to work. If set to `Disabled`, it disables the previously mentioned controllers and endpoints. Setting `uiextension` to `Disabled` has no effect on the CRD -- it does not create a CRD if it does not yet exist, nor does it delete the CRD if it already exists.* `unsupported-storage-drivers`: Enables types for storage providers and provisioners that aren't enabled by default. See {xref-unsupported-storage-drivers}[Allow Unsupported Storage Drivers] for more information.
* `ui-sql-cache`: Enables an SQLite-based cache for UI tables and Server-Side Pagination. See {xref-ui-server-side-pagination}[UI Server-Side Pagination] for more information.

The following table shows the availability and default values for some feature flags in Rancher. Features marked "GA" are generally available:

|===
| Feature Flag Name | Default Value | Status | Available As Of | Additional Information

| `aggregated-roletemplates`
| `Disabled`
| Experimental
| v2.11.0
| This flag value is locked on install and can't be changed.

| `clean-stale-secrets`
| `Active`
| GA
| v2.11.0
|

| `cluster-shell`
| `Active`
| GA
| v2.15.0
|

| `continuous-delivery`
| `Active`
| GA
| v2.6.0
|

| `crt-token-ttl-rotation`
| `Enabled`
| GA
| v2.15.0
| 

| `external-rules`
| v2.7.14: `Disabled`, v2.8.5: `Active`
| Removed
| v2.7.14, v2.8.5
| This flag affected {xref-cluster-project-roles}#_external_roletemplate_behavior[external `RoleTemplate` behavior]. It is removed in Rancher v2.9.0 and later as the behavior is enabled by default.

| `fleet`
| `Active`
| Can no longer be disabled
| v2.6.0
|

| `fleet`
| `Active`
| GA
| v2.5.0
|

| `harvester`
| `Active`
| Experimental
| v2.6.1
|

| `harvester-baremetal-container-workload`
| `Disabled`
| GA
| v2.15.0
| 

| `hide-local-auth-provider`
| `Disabled`
| GA
| v2.15.0
| See the <<hide-local-auth-provider-warning,warning>> above about the risk of being locked out of the UI, API, and CLI.

| `imperative-api-extension`
| `Active`
| GA
| v2.11.0
|

| `imported-day-2-ops`
| `Active`
| GA
| v2.15.0
| Enables day 2 operations for imported RKE2 and K3s clusters. Changing this flag requires a Rancher restart. See {xref-cluster-deployment-register-existing-clusters}#_day_2_operations_for_imported_rke2_and_k3s_clusters[Day 2 Operations for Imported RKE2 and K3s Clusters] for more information.

| `legacy`
| `Disabled` for new installs, `Active` for upgrades
| GA
| v2.6.0
|

| `managed-system-upgrade-controller`
| `Active`
| GA
| v2.10.0
|

| `node-shell`
| `Active`
| GA
| v2.15.0
|

| `pod-shell`
| `Active`
| GA
| v2.15.0
|

| `rke2`
| `Active`
| Experimental
| v2.6.0
|

| `token-hashing`
| `Disabled` for new installs, `Active` for upgrades
| GA
| v2.6.0
|

| `uiextension`
| `Active`
| GA
| v2.9.0
|

| `ui-sql-cache`
| `Active`
| GA
| v2.9.0
|
|===
